# POEM

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  structure.txt
data/: poem_mechanistic_results.csv  prime2_training_data.csv
lib/mechanistic_model/: affinities.py  cytosolic_aminopeptidases.py  erap1.py  main.py  mechanistic_model.jl  mechanistic_model_MA.jl  mechanistic_model_custom_settings.yml  mechanistic_model_settings.yml  mechanistic_model_settings_MA.yml  proteasome.py  tap.py  tapasin_dependence.py
lib/mechanistic_model/data/: TDs.npy  bERs.npy  bashirova_database.csv  erap1_training_data.csv  mechanistic_model_settings.yml  tap_training_data.csv
lib/mechanistic_model/utils/: aaindex1_pca.json  utils.py
lib/poem/: main.py  poem_settings.yml
lib/poem/data/: NetTepi_Enrichments.csv  mhci_g_alpha.tsv  mhci_g_beta.tsv
lib/poem/utils/: utils.py
test/mechanistic_model/: mechanistic_test.csv  mechanistic_test_poem_mech.csv  mechansitic_test.csv  poem_mechanistic_results.csv  test.fasta
test/mechanistic_model/fastas/: ovalbumin.fasta  test.fasta
trained_models/: LightGBM_POEM.pkl  LogReg.pkl  LogReg_scaler.pkl  mlp_model.h5  mlp_model_scaler.pkl
