[metadata]
name = POEM
version = 0.1.0
author = Miles Weathesreed
author_email = miles.weatherseed@st-annes.ox.ac.uk
description = A brief description of your package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miles-weatherseed/POEM
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.26.0
    pandas>=2.2.0

[options.extras_require]
dev =
    pytest
    pytest-cov